# DJI-Onboard-SDK-ROS-Multi-UAV-Formation

./: README.md
dji_sdk/: CMakeLists.txt  dji_sdk.sublime-project  dji_sdk.sublime-workspace  package.xml
dji_sdk/launch/: sdk_demo.launch  sdk_double_plane.launch  sdk_single_point.launch
dji_sdk/src/: dji_debug_node.cpp  dji_follow_node.cpp  dji_gps_node.cpp  dji_point_node.cpp  dji_quat_node.cpp  dji_sdk_node.cpp
dji_sdk/srv/: cmd_sdk.srv  set_home.srv  set_target_point.srv
